# PreMLCheck-Library

./: BUILD_AND_PUBLISH.md  MANIFEST.in  PYPI_CHECKLIST.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify_package.py
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md
examples/: PreMLCheck_Demo.ipynb  basic_usage.py
examples/sample_datasets/: classification_sample.csv  regression_sample.csv
premlcheck/: __init__.py  analyzer.py  config.py  model_recommender.py  overfitting_predictor.py  performance_estimator.py  preprocessing_advisor.py  quality_checker.py  report_generator.py  task_detector.py
premlcheck/utils/: __init__.py  metrics.py  validators.py  visualizers.py
tests/: test_integration.py  test_model_recommender.py  test_overfitting_predictor.py  test_performance_estimator.py  test_preprocessing_advisor.py  test_quality_checker.py  test_report_generator.py  test_task_detector.py
tests/fixtures/: .gitkeep
