[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "premlcheck"
version = "0.1.0"
description = "An intelligent Python library that analyzes datasets before training machine learning models"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Mudassar Hussain", email = "mudassarhussain6533@gmail.com"}
]
keywords = [
    "machine-learning",
    "data-analysis",
    "preprocessing",
    "ml-advisor",
    "dataset-quality",
    "overfitting-detection"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "scikit-learn>=0.22.0",
    "scipy>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
]
viz = [
    "matplotlib>=3.0.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/MudassarGill/PreMLCheck-Library"
Documentation = "https://github.com/MudassarGill/PreMLCheck-Library/tree/main/docs"
Repository = "https://github.com/MudassarGill/PreMLCheck-Library"
"Bug Tracker" = "https://github.com/MudassarGill/PreMLCheck-Library/issues"

[project.scripts]
premlcheck = "premlcheck.cli:main"

[tool.setuptools]
packages = ["premlcheck", "premlcheck.utils"]

[tool.setuptools.package-data]
premlcheck = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=premlcheck --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
